--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 function (add_example TGT)
     add_executable(${TGT} "${TGT}.cpp")
+    set_target_properties(${TGT} PROPERTIES FOLDER examples)
     target_set_output_dirs(${TGT})
     target_link_libraries(${TGT} PRIVATE project_options clu::clu)
     target_set_cxx_std(${TGT})
