Fixed and added tests for all basic execution algorithms

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,4 +44,5 @@ add_test_target("string_utils")
 add_test_target("tag_invoke")
 add_test_target("uri")
 add_test_target("uuid")
+add_test_target("execution/algorithms/basic")
 add_test_target("execution/algorithms")
