--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ add_test_target("ordered_hash_set")
 add_test_target("overload")
 add_test_target("parse")
 add_test_target("polymorphic_value")
+add_test_target("query")
 add_test_target("rational")
 add_test_target("scope")
 add_test_target("semver")
