Add tests for sender consumers, fixed timer loop

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,4 +46,5 @@ add_test_target("tag_invoke")
 add_test_target("uri")
 add_test_target("uuid")
 add_test_target("execution/algorithms/basic")
+add_test_target("execution/algorithms/consumers")
 add_test_target("execution/algorithms")
