--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -47,4 +47,5 @@ add_test_target("uri")
 add_test_target("uuid")
 add_test_target("execution/algorithms/basic")
 add_test_target("execution/algorithms/consumers")
+add_test_target("execution/algorithms/parallel")
 add_test_target("execution/algorithms")
