Tests for scheduling algorithms

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,4 +48,4 @@ add_test_target("uuid")
 add_test_target("execution/algorithms/basic")
 add_test_target("execution/algorithms/consumers")
 add_test_target("execution/algorithms/parallel")
-add_test_target("execution/algorithms")
+add_test_target("execution/algorithms/scheduling")
