Tests for composed algorithms

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ add_test_target("tag_invoke")
 add_test_target("uri")
 add_test_target("uuid")
 add_test_target("execution/algorithms/basic")
+add_test_target("execution/algorithms/composed")
 add_test_target("execution/algorithms/consumers")
 add_test_target("execution/algorithms/parallel")
 add_test_target("execution/algorithms/scheduling")
