Try to fix natvis linking

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -149,7 +149,10 @@ if (MSVC)
         $<INSTALL_INTERFACE:${CLU_NATVIS_FILE}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${CLU_NATVIS_FILE}>
     )
-    target_link_options(clu PRIVATE "/NATVIS:\"${CLU_NATVIS_FILE}\"")
+    target_link_options(clu PRIVATE
+        $<INSTALL_INTERFACE:"/NATVIS:${CLU_NATVIS_FILE}">
+        $<BUILD_INTERFACE:"/NATVIS:${CMAKE_CURRENT_SOURCE_DIR}/${CLU_NATVIS_FILE}">
+    )
 endif ()
 
 if (BUILD_SHARED_LIBS)
