Try to fix natvis linking (take 2)

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -150,8 +150,8 @@ if (MSVC)
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${CLU_NATVIS_FILE}>
     )
     target_link_options(clu PRIVATE
-        $<INSTALL_INTERFACE:"/NATVIS:${CLU_NATVIS_FILE}">
-        $<BUILD_INTERFACE:"/NATVIS:${CMAKE_CURRENT_SOURCE_DIR}/${CLU_NATVIS_FILE}">
+        $<INSTALL_INTERFACE:/NATVIS:${CLU_NATVIS_FILE}>
+        $<BUILD_INTERFACE:/NATVIS:${CMAKE_CURRENT_SOURCE_DIR}/${CLU_NATVIS_FILE}>
     )
 endif ()
 
