--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,6 +16,7 @@ add_example(enumerate)
 add_example(function_ref)
 add_example(generator)
 add_example(indices)
+add_example(module)
 add_example(random)
 add_example(scope)
 add_example(string_utils)
